@startuml Diagrama Entidad-Relación - RA Manager

' Estilos
skinparam backgroundColor #FEFEFE
skinparam entity {
  BackgroundColor #E1F5FE
  BorderColor #0277BD
  FontSize 11
}

' ==================== ENTIDADES DE AUTENTICACIÓN ====================

entity "TipoDocumento" as tipo_doc {
  * id_tipo_documento : BIGINT <<PK>>
  --
  * descripcion : VARCHAR(100) <<UNIQUE>>
}

entity "PasswordResetOTP" as otp {
  * id : BIGINT <<PK>>
  --
  * email : VARCHAR(255)
  * otp_code : VARCHAR(6)
  * created_at : TIMESTAMP
  * expires_at : TIMESTAMP
  * is_used : BOOLEAN
  * rol : VARCHAR(20)
}

' ==================== ENTIDADES DE USUARIOS ====================

entity "Docente" as docente {
  * id_docente : BIGINT <<PK>>
  --
  * nombre : VARCHAR(100)
  * apellido : VARCHAR(100)
  * codigo_docente : VARCHAR(50) <<UNIQUE>>
  * contrasenia_docente : VARCHAR(255)
  * correo : VARCHAR(255) <<UNIQUE>>
  id_tipo_documento : BIGINT <<FK>>
  * num_documento : VARCHAR(50) <<UNIQUE>>
  num_telefono : VARCHAR(30)
}

entity "Estudiante" as estudiante {
  * id_estudiante : BIGINT <<PK>>
  --
  * nombre : VARCHAR(100)
  * apellido : VARCHAR(100)
  * codigo_estudiante : VARCHAR(50) <<UNIQUE>>
  * contrasena_estudiante : VARCHAR(255)
  id_tipo_documento : BIGINT <<FK>>
  * num_documento : VARCHAR(50) <<UNIQUE>>
  * correo : VARCHAR(255) <<UNIQUE>>
  jornada : VARCHAR(50)
}

entity "Coordinador" as coordinador {
  * id_coordinador : BIGINT <<PK>>
  --
  * nombre : VARCHAR(100)
  * codigo_coordinador : VARCHAR(50) <<UNIQUE>>
  * contrasenia_coord : VARCHAR(255)
  * correo : VARCHAR(255) <<UNIQUE>>
}

' ==================== ENTIDADES ACADÉMICAS ====================

entity "Programa" as programa {
  * id_programa : BIGINT <<PK>>
  --
  * nombre : VARCHAR(150)
  * codigo_programa : VARCHAR(50) <<UNIQUE>>
}

entity "PeriodoAcademico" as periodo {
  * id_periodo : BIGINT <<PK>>
  --
  * descripcion : VARCHAR(100) <<UNIQUE>>
  * fecha_inicio : DATE
  * fecha_finalizacion : DATE
  ==
  CHECK (fecha_finalizacion >= fecha_inicio)
}

entity "Asignatura" as asignatura {
  * id_asignatura : BIGINT <<PK>>
  --
  * nombre : VARCHAR(150)
  * codigo_asignatura : VARCHAR(50) <<UNIQUE>>
  id_docente : BIGINT <<FK>>
  grupo : VARCHAR(20)
  id_programa : BIGINT <<FK>>
}

entity "ResultadoDeAprendizaje" as ra {
  * id_ra : BIGINT <<PK>>
  --
  id_asignatura : BIGINT <<FK>>
  * porcentaje_ra : DECIMAL(5,2)
  descripcion : TEXT
  ==
  CHECK (porcentaje_ra >= 0 AND porcentaje_ra <= 100)
}

entity "IndicadoresDeLogro" as indicador {
  * id_ind : BIGINT <<PK>>
  --
  id_ra : BIGINT <<FK>>
  * porcentaje_ind : DECIMAL(5,2)
  descripcion : TEXT
  ==
  CHECK (porcentaje_ind >= 0 AND porcentaje_ind <= 100)
}

' ==================== ENTIDADES DE ACTIVIDADES ====================

entity "TipoActividad" as tipo_act {
  * id_tipo_actividad : BIGINT <<PK>>
  --
  * descripcion : VARCHAR(100) <<UNIQUE>>
}

entity "Actividad" as actividad {
  * id_actividad : BIGINT <<PK>>
  --
  id_tipo_actividad : BIGINT <<FK>>
  * nombre_actividad : VARCHAR(150)
  descripcion : TEXT
  * fecha_creacion : DATE
  fecha_cierre : DATE
  ==
  CHECK (fecha_cierre IS NULL OR fecha_cierre >= fecha_creacion)
}

entity "RaActividad" as ra_actividad {
  * id_ra_actividad : BIGINT <<PK>>
  --
  id_actividad : BIGINT <<FK>>
  id_ra : BIGINT <<FK>>
  * porcentaje_ra_actividad : DECIMAL(5,2)
  ==
  UNIQUE (id_actividad, id_ra)
  CHECK (porcentaje_ra_actividad >= 0 AND porcentaje_ra_actividad <= 100)
}

entity "RaActividadIndicador" as ra_act_ind {
  * id : BIGINT <<PK>>
  --
  id_ra_actividad : BIGINT <<FK>>
  id_ind : BIGINT <<FK>>
  ==
  UNIQUE (id_ra_actividad, id_ind)
}

' ==================== ENTIDADES DE MATRÍCULA Y NOTAS ====================

entity "Matricula" as matricula {
  * id_matricula : BIGINT <<PK>>
  --
  id_estudiante : BIGINT <<FK>>
  id_periodo : BIGINT <<FK>>
  id_asignatura : BIGINT <<FK>>
  nota_final : DECIMAL(5,2)
  ==
  UNIQUE (id_estudiante, id_periodo, id_asignatura)
  CHECK (nota_final IS NULL OR (nota_final >= 0 AND nota_final <= 5))
}

entity "NotasActividad" as notas {
  * id : BIGINT <<PK>>
  --
  id_matricula : BIGINT <<FK>>
  id_ra_actividad : BIGINT <<FK>>
  nota_ra_actividad : DECIMAL(5,2)
  retroalimentacion : TEXT
  id_ind : BIGINT <<FK, NULL>>
  ==
  UNIQUE (id_matricula, id_ra_actividad, id_ind)
  CHECK (nota_ra_actividad IS NULL OR (nota_ra_actividad >= 0 AND nota_ra_actividad <= 5))
}

' ==================== ENTIDADES DE RECURSOS ====================

entity "Recurso" as recurso {
  * id_recurso : BIGINT <<PK>>
  --
  id_asignatura : BIGINT <<FK>>
  * titulo : VARCHAR(200)
  * archivo : FILE_PATH
  * fecha_subida : TIMESTAMP
}

' ==================== ENTIDADES DE AUDITORÍA ====================

entity "ImportAudit" as audit {
  * id : BIGINT <<PK>>
  --
  id_coordinador : BIGINT <<FK, NULL>>
  * kind : VARCHAR(32)
  filename : VARCHAR(255)
  * created_count : INTEGER
  * existing_count : INTEGER
  * errors_count : INTEGER
  * created_at : TIMESTAMP
  ==
  kind IN ('matriculados', 'docentes', 'asignaturas_ras')
}

' ==================== RELACIONES ====================

' Tipo Documento
tipo_doc ||--o{ docente : "id_tipo_documento"
tipo_doc ||--o{ estudiante : "id_tipo_documento"

' Programa
programa ||--o{ asignatura : "id_programa"

' Docente
docente ||--o{ asignatura : "id_docente"

' Asignatura
asignatura ||--o{ ra : "id_asignatura"
asignatura ||--o{ matricula : "id_asignatura"
asignatura ||--o{ recurso : "id_asignatura"

' RA
ra ||--o{ indicador : "id_ra"
ra ||--o{ ra_actividad : "id_ra"

' Tipo Actividad
tipo_act ||--o{ actividad : "id_tipo_actividad"

' Actividad
actividad ||--o{ ra_actividad : "id_actividad"

' Ra Actividad
ra_actividad ||--o{ ra_act_ind : "id_ra_actividad"
ra_actividad ||--o{ notas : "id_ra_actividad"

' Indicadores
indicador ||--o{ ra_act_ind : "id_ind"
indicador ||--o{ notas : "id_ind"

' Estudiante
estudiante ||--o{ matricula : "id_estudiante"

' Periodo
periodo ||--o{ matricula : "id_periodo"

' Matricula
matricula ||--o{ notas : "id_matricula"

' Coordinador
coordinador ||--o{ audit : "id_coordinador"

' Notas sobre el modelo
note right of notas
  Permite múltiples calificaciones
  por actividad cuando se califican
  indicadores específicos
end note

note right of ra_act_ind
  Tabla de relación N:N que permite
  asignar múltiples indicadores
  a una misma actividad
end note

note right of matricula
  Constraint único garantiza
  una sola matrícula por
  estudiante-periodo-asignatura
end note

note left of otp
  Sistema de recuperación
  de contraseña con códigos
  de un solo uso (OTP)
end note

note bottom of audit
  Registro de auditoría para
  importaciones masivas realizadas
  por coordinadores
end note

@enduml
